# TrainerFastAPI

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  gunicorn.conf.py  pyproject.toml  requirements.in  run.py  setup.cmd  setup.py  setup.sh  version.py  version.txt
.github/workflows/: deploy.dev.yaml
app/core/: config.py  error_handlers.py  exceptions.py  middlewares.py  responses.py  security.py  templates.py  text_content.py
app/core/security/: auth.py  csfr.py
app/db/dao/: base_dao.py  user.py
app/migrations/: __init__.py  env.py
app/services/: file_service.py  notification.py  taskiq_app.py
app/utils/: dev_secret_gen.py  gen_project_structure.py  logger.py  num_code.py  project_structure.txt
deploy/: compose.trainerapi.full.yml  compose.trainerapi.infrastructure.yml  compose.trainerapi.web_app.yml  compose.trainerfastapi.full.yml  compose.trainerfastapi.infrastructure.yml  compose.trainerfastapi.web_app.yml  notify_telegram.py  update_version.py
deploy/nginx_confings/: beahea.ru.conf  minio.beahea.ru.conf  port.beahea.ru.conf  rabbit.beahea.ru.conf  tg.bot.beahea.ru.conf
descriptions/: config_settings.md  project_structure.txt
scripts/: dev_secret_gen.py  gen_project_structure.py  generate_changelog_git_changelog.py  generate_config_doc.py  notify_telegram.py  num_code.py  update_version.py  version.py
static/css/: privacy_policy_oasis.css
static/js/: alerts.js  api.js  auth.js  main.js  profile.js
templates/: privacy_policy_oasis.html
templates/service_templates/: privacy_policy_oasis.html
(+35 files in other folders)
